# hackathon_stocks

./: Account.cpp  Account.h  BuyOrder.cpp  BuyOrder.h  CMakeLists.txt  Execution.cpp  Execution.h  I_Printable.cpp  I_Printable.h  Market.cpp  Market.h  MarketSimulator.cpp  MarketSimulator.h  Order.cpp  Order.h  README.md  SellOrder.cpp  SellOrder.h  company.h  main.cpp  pricelotbuy.h  pricelotsell.h  stock_names.csv
